apps/base/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
spec:
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
  ports:
    - name: http
      port: 7878
      targetPort: 7878
      protocol: TCP
