apps/base/radarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: http
